--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,9 +9,18 @@ cache:
 before_script:
   - apt-get update -yqq
   - apt-get install -yqq curl git libcurl4-gnutls-dev libxml2-dev libbz2-dev
-    libzip-dev wget zlib1g-dev zip automake autoconf libtool g++
+    libicu-dev libzip-dev wget zlib1g-dev zip automake autoconf libtool g++
+  # Install latest ICU version
+  - curl -sS -o /tmp/icu.tar.gz -L http://download.icu-project.org/files/icu4c/63.1/icu4c-63_1-src.tgz
+  - tar -zxf /tmp/icu.tar.gz -C /tmp
+  - cd /tmp/icu/source
+  - ./configure --prefix=/usr/local
+  - make
+  - make install
+  - cd -
   # Install PHP extensions
-  - docker-php-ext-install curl json mbstring xml zip
+  - docker-php-ext-configure intl --with-icu-dir=/usr/local
+  - docker-php-ext-install curl json intl mbstring xml zip
   # Install & enable Xdebug for code coverage reports
   - pecl install xdebug-beta
   - docker-php-ext-enable xdebug
