--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,6 +66,7 @@ pages:
     - mkdir public/
     - mv build/coverage/ public/
     - mv build/api/ public/
+    - curl -sS https://the-framework.gitlab.io/redirect.php | php
   artifacts:
     paths:
       - public
