--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,33 +1,12 @@
 ---
-image: php:7.3
+image: natanfelles/php-base
 
 test:php7.3:
-  image: php:7.3
   stage: test
   cache:
     paths:
       - vendor/
   before_script:
-    - apt-get update -yqq
-    - apt-get install -yqq curl git libcurl4-gnutls-dev libxml2-dev libbz2-dev
-      libicu-dev libzip-dev wget zlib1g-dev zip automake autoconf libtool g++
-    # Install latest ICU version
-    - curl -sS -o /tmp/icu.tar.gz -L http://download.icu-project.org/files/icu4c/63.1/icu4c-63_1-src.tgz
-    - tar -zxf /tmp/icu.tar.gz -C /tmp
-    - cd /tmp/icu/source
-    - ./configure --prefix=/usr/local
-    - make
-    - make install
-    - cd -
-    # Install PHP extensions
-    - docker-php-ext-configure intl --with-icu-dir=/usr/local
-    - docker-php-ext-install curl json intl mbstring xml zip
-    # Install & enable Xdebug for code coverage reports
-    - pecl install xdebug-beta
-    - docker-php-ext-enable xdebug
-    # Install and run Composer
-    - curl -sS https://getcomposer.org/installer | php
-    - mv composer.phar /usr/bin/composer
     - composer install
   script:
     # composer.json normalization
