--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ test:php:
     - composer install
   script:
     # composer.json normalization
-    #- composer normalize --dry-run --indent-size=1 --indent-style=tab
+    - composer normalize --dry-run --indent-size=1 --indent-style=tab
     # Check if syntax errors was fixed with php-cs-fixer
     #- vendor/bin/php-cs-fixer fix --diff --dry-run --verbose
     # PHP errors
@@ -24,11 +24,11 @@ test:php:
     # Run PHPUnit
     - vendor/bin/phpunit --colors=never
     # Run phpDocumentor
-    - phpdoc
+    # - phpdoc
   artifacts:
     paths:
       - build/coverage/
-      - build/docs/
+      # - build/docs/
   coverage: '/^\s*Lines:\s*\d+.\d+\%/'
 
 pages:
@@ -41,7 +41,7 @@ pages:
   script:
     - mkdir public/
     - mv build/coverage/ public/
-    - mv build/docs/ public/
+    # - mv build/docs/ public/
     - curl -sS https://the-framework.gitlab.io/redirect.php | php
   artifacts:
     paths:
