--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ test:php:
     - composer install
   script:
     - composer normalize --dry-run --indent-size=1 --indent-style=tab
+    - vendor/bin/php-cs-fixer fix --diff --dry-run --verbose
     - vendor/bin/phpunit --colors=never
     - phpdoc
   artifacts:
