--- a/composer.json
+++ b/composer.json
@@ -24,13 +24,13 @@
     "require": {
         "php": ">=8.0",
         "ext-intl": "*",
-        "natanfelles/helpers": "^2.1"
+        "aplus/helpers": "^2.1"
     },
     "require-dev": {
         "ext-xdebug": "*",
+        "aplus/coding-standard": "^1.8",
         "ergebnis/composer-normalize": "^2.15",
         "jetbrains/phpstorm-attributes": "^1.0",
-        "natanfelles/coding-standard": "^1.7",
         "phpmd/phpmd": "^2.10",
         "phpstan/phpstan": "^0.12",
         "phpunit/phpunit": "^9.5"
