--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "support": {
-        "email": "natanfelles@gmail.com",
+        "email": "support@aplus-framework.com",
         "issues": "https://gitlab.com/aplus-framework/libraries/language/issues",
         "wiki": "https://gitlab.com/aplus-framework/libraries/language/wikis/home",
         "source": "https://gitlab.com/aplus-framework/libraries/language",
