Add composer funding

--- a/composer.json
+++ b/composer.json
@@ -58,5 +58,11 @@
         "wiki": "https://gitlab.com/aplus-framework/libraries/language/wikis/home",
         "source": "https://gitlab.com/aplus-framework/libraries/language",
         "docs": "https://docs.aplus-framework.com/guides/libraries/language/"
-    }
+    },
+    "funding": [
+        {
+            "type": "other",
+            "url": "https://www.paypal.com/donate/?hosted_button_id=NGBNW5PY4VSJ4"
+        }
+    ]
 }
