--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: PHPStan
         run:
-          vendor/bin/phpstan analyse -vvv
+          vendor/bin/phpstan analyse --xdebug -vvv
 
       - name: PHPUnit
         run: vendor/bin/phpunit --verbose
