--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ test:php:
   variables:
     COMPOSER_ROOT_VERSION: dev-master
   before_script:
+    - php -v
     - composer update
   script:
     - composer normalize --dry-run --indent-size=4 --indent-style=space
